--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,8 @@
     title="{{ site.title }}"
     href="{{ site.baseurl }}/atom.xml"
   />
+   <link rel="alternate" type="application/json" title="{{ site.title }}"
+  href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
   <link
     rel="sitemap"
     type="application/xml"
