--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <section id="intro">
   <div>
     <p>
-      🌿&nbsp&nbsp<a href="/">home</a>&nbsp&nbsp<a href="/contact">contact</a
+      ➰&nbsp&nbsp<a href="/">home</a>&nbsp&nbsp<a href="/contact">contact</a>
     </p>
   </div>
 
