--- a/_layouts/software-project.html
+++ b/_layouts/software-project.html
@@ -4,7 +4,7 @@ layout: default
 
 <section>
   <div>
-    <p>🌿&nbsp&nbsp<a href="/software-projects">back</a></p>
+    <p>➰&nbsp&nbsp<a href="/">home</a>&nbsp&nbsp<a href="/software-projects">back</a>&nbsp&nbsp<a href="/contact">contact</a></p>
   </div>
   {{ content }}
 </section>
