--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
   <meta property="og:title" content="{{ page.title }}"/>
   <meta property="og:description" content="{{ page.description }}"/>
 
+  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>➰</text></svg>">
+
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css" />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
   <link
@@ -21,7 +23,7 @@
     site.title | escape }} {% unless page.tag or page.title %} {% endunless %}
   </title>
 
-  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png" />
+
   <link
     rel="alternate"
     type="application/atom+xml"
