Added the template for the writings and the podcasts.

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -98,10 +98,10 @@ html[data-theme="dark"] {
   --light-text-color: #c4bbf0;
   --medium-text-color: #52057b;
   --main-text-color: #474539;
-  --dark-text-color: #228b22;
-  --link-color: #228b22;
+  --dark-text-color: #4D648D;
+  --link-color: #4D648D;
   --code-bg-color: rgb(0, 182, 152);
-  --link-shade-color: #ebfaeb;
+  --link-shade-color: #D0E1F9;
   background-color: #fffffd;
 
   #theme-toggle div {
