--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <section>
   <div>
-    <p>➰&nbsp&nbsp<a href="/reflections">back</a></p>
+    <p>🔱&nbsp&nbsp<a href="/reflections">back</a></p>
   </div>
   {% assign age_split = page.age | round: 2 | split: "." %} {% assign integral =
   age_split[0] %} {% assign fractional = age_split[1] | append: "00" | truncate:
