--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -4,7 +4,7 @@ layout: default
 
 <section>
   <div>
-    <p>➰&nbsp&nbsp<a href="/thoughtware">back</a></p>
+    <p>🔱&nbsp&nbsp<a href="/thoughtware">back</a></p>
   </div>
   {{ content }}
 </section>
