Added the yet another language learning extension project.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@ layout: compress
     </script>
   </body>
 
-  {% if page.url == '/' %}
+<!--   {% if page.url == '/' %}
   <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js"></script>
   <script>
     var sjs = SimpleJekyllSearch({
@@ -56,4 +56,4 @@ layout: compress
     });
   </script>
   {% endif %}
-</html>
+ --></html>
