Updated the homepage.

--- a/_layouts/scripts-exercises.html
+++ b/_layouts/scripts-exercises.html
@@ -4,7 +4,7 @@ layout: default
 
 <section>
   <div>
-    <p>🔱&nbsp&nbsp<a href="/">home</a>&nbsp&nbsp<a href="/about-me">about me</a>&nbsp&nbsp<a href="/contact">contact</a></p>
+    <p>🔱&nbsp&nbsp<a href="/">Home</a>&nbsp&nbsp<a href="/about-me">CV</a>&nbsp&nbsp<a href="/contact">Contact</a></p>
   </div>
   {{ content }}
 </section>
@@ -13,10 +13,10 @@ layout: default
 <center>
   <div>
     <br />
-    <a href="/contact"><button>reply by email</button></a>
+    <a href="/contact"><button>Reply by email</button></a>
     <a
       href="https://twitter.com/intent/tweet?text={{page.title | urlencode}}%0A%0A{{site.url}}{{page.url | urlencode}}"
-      ><button>tweet this</button></a
+      ><button>Tweet this</button></a
     >
     <br /><br />
   </div>
