Updated the styling for the misc pages.

--- a/_layouts/miscellaneous.html
+++ b/_layouts/miscellaneous.html
@@ -4,7 +4,7 @@ layout: default
 
 <section>
   <div>
-    <p>🔱&nbsp&nbsp<a href="/">Home</a>&nbsp&nbsp<a href="/assets/pdf/test.pdf">CV</a>&nbsp&nbsp<a href="/contact">Contact</a></p>
+    <p>🔱&nbsp&nbsp<a href="/">Home</a>&nbsp&nbsp<a href="/about-me">CV</a>&nbsp&nbsp<a href="/contact">Contact</a></p>
   </div>
   {{ content }}
 </section>
