Updated the icon of the website.

--- a/_includes/email.html
+++ b/_includes/email.html
@@ -3,7 +3,7 @@
 
 	<script>
 		/* 1. define variables */
-		var me = "jhagspiel";
+		var me = "j.hagspiel";
 		var place = "inode.at";
 
 		/* 2. find email link to replace */
