Updated the logo on each page.

--- a/_layouts/miscellaneous.html
+++ b/_layouts/miscellaneous.html
@@ -4,7 +4,9 @@ layout: default
 
 <section>
   <div>
-    <p>🔱&nbsp&nbsp<a href="/">Home</a>&nbsp&nbsp<a href="/about-me">CV</a>&nbsp&nbsp<a href="/contact">Contact</a></p>
+    <p>
+      <img style="float: middle; padding: 0px 0px 2px 0px;" src="../android-chrome-256x256.png"  height="22.23pt" valign="middle">&nbsp&nbsp<a href="/">Home</a>&nbsp&nbsp<a href="/about-me">CV</a>&nbsp&nbsp<a href="/contact">Contact</a>
+    </p>
   </div>
   {{ content }}
 </section>
