--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <section id="intro">
   <div>
     <p>
-      🔱&nbsp&nbsp<a href="/">Home</a>&nbsp&nbsp<a href="/about-me">CV</a>&nbsp&nbsp<a href="/contact">Contact</a>
+      <img style="float: middle; padding: 0px 0px 2px 0px;" src="../android-chrome-256x256.png"  height="22.23pt" valign="middle">&nbsp&nbsp<a href="/">Home</a>&nbsp&nbsp<a href="/about-me">CV</a>&nbsp&nbsp<a href="/contact">Contact</a>
     </p>
   </div>
 
